# DingDong_pi

./: .cproject  .gdbinit  .project  CMakeLists.txt  README.md  build.sh  kilo.jsonc  run_debug.sh
SD_creator/: build_image.sh  firstrun.sh
cmake/: arm-flags.cmake
src/: main.cpp
toolchains/: rpi-zero2w.cmake
